replaced collect(Collectors.toList()) with .toList()